# C-plus-plus

C++与opencv/1.cmake配置/: main.cpp
C++与opencv/2.读取图片和视频流/: CMakeLists.txt
C++与opencv/2.读取图片和视频流/src/: 1.img.cpp  2.video.cpp  3.camera.cpp
C++与opencv配置/1.cmake_debug/: CMakeLists.txt
C++基础语法/: 1.main_std.cpp  10.if_demo.cpp  11.if_else_demo.cpp  12.switch_demo.cpp  13.switch_enum.cpp  14.for_demo.cpp  15.for_auto_demo.cpp  16.do_while_demo.cpp  17.str_demo.cpp  18.cpp_str_demo.cpp  2.main_type.cpp  3.var_warning.cpp  4.room_square.cpp  5.data_type.cpp  6.sizeof_demo.cpp  7.const_demo.cpp  8.array_demo.cpp  9.vector_demo.cpp
C++基础语法--函数与指针/: 1.func_demo.cpp  10.pointer_deref.cpp  11.pointer_allo.cpp  12.pointer_array.cpp  13.func_pass_pointer.cpp  14.swap_num.cpp  15.const_pointer.cpp  16.return_pointer.cpp  17.ref_demo.cpp  2.func_prototype.cpp  3.func_params.cpp  4.func_overloading.cpp  5.func_pass_arr.cpp  6.func_pass_ref.cpp  7.func_stack.cpp  8.func_factorial.cpp  9.pointer_demo.cpp
C++基础语法--类型，循环，函数/: 0.main.cpp
C++进阶语法--OOP,STL/: 1.class_declare.cpp  10.shallow_deep_copy.cpp  11.use_const.cpp  12.static_use.cpp  13.unique_pointer.cpp  14.shared_pointer.cpp  15.func_temp.cpp  16.class_temp.cpp  17.iterator.cpp  18.18.algorithm.cpp  2.access_member.cpp  3.public_private.cpp  4.implement_methods.cpp  5.cons_des.cpp  6.initial_list.cpp  7.initial_list_demo.cpp  8.delegate_cons.cpp  9.copy_cons.cpp
